# ranges_code_samples

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: build.sh  main.yml
benchmarks/: CMakeLists.txt  count_lines_in_files.cpp  insertion_sort.cpp  insertion_sort.csv  quicksort.cpp  sum_of_squares.cpp  sum_of_squares.csv
ci/: Dockerfile.vs  VsDevCmdPowerShell.bat  build.bat  build.cmake  build.sh
cmake/: AddTarget.cmake
example/: CMakeLists.txt  cmcstl2.cpp  game.cpp  game_v2.cpp
include/test/: range_matcher.hpp
include/utility/: concepts.hpp  missing_utilities.hpp  view.hpp
test/: CMakeLists.txt
test/actions/: CMakeLists.txt  actions.cpp
test/algorithms/: CMakeLists.txt  algorithms.cpp  cmcstl2.cpp  numeric.cpp  range_v3.cpp
test/projections/: CMakeLists.txt  projections.cpp
test/views/: CMakeLists.txt  range_v3.cpp  views.cpp
